Enhance - Reorder Skills

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			These are the areas that I am truly passionate about and have specialized on. I would totally love to work with you as :
 		</h6>
 		<div class="row" id="i-am-blocks">
-			
+
 			<div class="col-sm-3 zoomable">
 				<div><img src="img/rocket-ship.png" alt="Salim Shrestha"></div>
 				<h3>Entreprogrammer</h3>
@@ -136,7 +136,15 @@
 
 			<div class="skill-box">
 				<div class="skill-meter">
-					<div class="skill-line">
+					<div class="skill-line" data-strength="80%">
+						<p>Back-End Development<span class="fas fa-skating"></span></p>
+					</div>
+				</div>
+			</div>
+
+			<div class="skill-box">
+				<div class="skill-meter">
+					<div class="skill-line" data-strength="70%">
 						<p>Front-End Development
 						<span class="fas fa-skating"></span></p>
 					</div>
@@ -145,23 +153,7 @@
 
 			<div class="skill-box">
 				<div class="skill-meter">
-					<div class="skill-line">
-						<p>Back-End Development<span class="fas fa-skating"></span></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="skill-box">
-				<div class="skill-meter">
-					<div class="skill-line">
-						<p>SEO Analysis<span class="fas fa-skating"></span></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="skill-box">
-				<div class="skill-meter">
-					<div class="skill-line">
+					<div class="skill-line" data-strength="60%">
 						<p>Machine Learning<span class="fas fa-skating"></span></p>
 					</div>
 				</div>
@@ -169,8 +161,16 @@
 
 			<div class="skill-box">
 				<div class="skill-meter">
-					<div class="skill-line">
-						<p>Data Analysis<span class="fas fa-skating"></span></p>
+					<div class="skill-line" data-strength="75%">
+						<p>Testing & Debugging<span class="fas fa-skating"></span></p>
+					</div>
+				</div>
+			</div>
+
+			<div class="skill-box">
+				<div class="skill-meter">
+					<div class="skill-line" data-strength="66%">
+						<p>Technical Communication<span class="fas fa-skating"></span></p>
 					</div>
 				</div>
 			</div>
