Tweak - Update About me section

--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
 		<div class="col-md-6">
 			<div id="about-me-text">
 				<p>
-				I am <strong>Salim Shrestha</strong>. I am currently living at Kathmandu, Nepal. I have been passionate about technology since my childhood when computers were so much fascinating. I am a graduate of <strong>Computer Science and Information Technology</strong> from Tribhuvan University.
+				I am a Full Stack Web Developer from Kathmandu, Nepal. I have worked mainly with PHP, WordPress, Laravel, Javascript, jQuery, and React. I have hands-on experience with Git & GitHub, Continuous Integration & Continuous Deployment, Live Testing, Software Architecture Design and Writing Standard and Maintainable codebase.
 				</p>
 				<p>
-					I am a <strong>freelance web designer and developer</strong>. I have been practicing web design and development for years. It's been a fruitful journey full of experiences. I have built many web products using PHP and Laravel framework. I am familiar with various Front-End and Backend technologies.
+					I first started learning Website Development in 2015. It has been a fruitful journey full of amazing experiences. Currently, I am working on various WordPress products.
 				</p>
 				<p>
 					When not working, I love reading and travelling. I like learning new things from internet or people around me. I love to improve myself every single day.
