Enhance - Update Experience metrics

--- a/index.html
+++ b/index.html
@@ -313,18 +313,18 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<h1 class="metric-value"><span>5</span>+</h1>
+				<h1 class="metric-value"><span data-value="5">5</span>+</h1>
 				<h6 class="metric-name">PROJECTS COMPLETED</h6>
 			</div>
 
 			<div class="col-sm-4">
-				<h1 class="metric-value"><span>2</span>+</h1>
+				<h1 class="metric-value"><span data-value="2">2</span>+</h1>
 				<h6 class="metric-name">YEARS OF EXPERIENCE</h6>
 			</div>
 
 			<div class="col-sm-4">
-				<h1 class="metric-value"><span>500</span>+</h1>
-				<h6 class="metric-name">HOURS OF LEARNING</h6>
+				<h1 class="metric-value"><span data-value="1000">1000</span>+</h1>
+				<h6 class="metric-name">HOURS WORKED</h6>
 			</div>
 		</div>
 		</div>
