Enhance - Change font styles for about message

--- a/index.html
+++ b/index.html
@@ -288,10 +288,15 @@
 		<div class="col-md-6">
 			<div id="about-me-text">
 				<p>
-				I am a Full Stack Web Developer from Kathmandu, Nepal. I have worked mainly with PHP, WordPress, Laravel, Javascript, jQuery, and React. I have hands-on experience with Git & GitHub, Continuous Integration & Continuous Deployment, Live Testing, Software Architecture Design and Writing Standard and Maintainable codebase.
+				I am a Full Stack Web Developer from Kathmandu, Nepal. I have worked mainly with <strong>PHP, WordPress, Laravel, Javascript, jQuery, and React</strong>.
+				</p>
+				<p>I have hands-on experience with <strong>Git & GitHub, Continuous Integration & Continuous Deployment, Live Testing, Software Architecture Design and Writing Standard and Maintainable codebase.</strong>
 				</p>
 				<p>
 					I first started learning Website Development in 2015. It has been a fruitful journey full of amazing experiences. Currently, I am working on various WordPress products.
+				</p>
+				<p>
+					Apart from Web Development, I am also interested in Machine Learning, Problem Solving and Competitive Programming.
 				</p>
 				<p>
 					When not working, I love reading and travelling. I like learning new things from internet or people around me. I love to improve myself every single day.
