Enhance - Update tools items

--- a/index.html
+++ b/index.html
@@ -184,93 +184,96 @@
 		<h1 class="text-center section-heading"><span>TOOLS</span></h1>
 
 		<h6 class="section-subheading">
-			I love working with latest, popular and up-to-date tools in the marketplace. My clients always get the latest technologies in their projects.
+			I love working with latest, popular and up-to-date tools in the marketplace. I have worked with these tools in my projects.
 		</h6>
 		<div class="row">
-			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-html5 my-tool-logo" style="color: #E44D26;"></span>
-					<p class="my-tool-name">HTML5</p>
-				</div>
-			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-css3 my-tool-logo" style="color: #2965F1;"></span>
-					<p class="my-tool-name">CSS3</p>
-				</div>
-			</div>
-
-			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-js my-tool-logo" style="color: #F0DB4F;"></span>
-					<p class="my-tool-name">Javascript</p>
-				</div>
-			</div>
-
-			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-bootstrap my-tool-logo" style="color: #563D7C;"></span>
-					<p class="my-tool-name">Bootstrap</p>
-				</div>
-			</div>
-
-			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-vuejs my-tool-logo" style="color: #42B883;"></span>
-					<p class="my-tool-name">
-						VueJs
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
+				<a href="#" target="_blank" class="my-tool-item">
 					<span class="fab fa-php my-tool-logo" style="color: #474A8A;"></span>
 					<p class="my-tool-name">PHP</p>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-wordpress my-tool-logo" style="color: #00749C;"></span>
+					<p class="my-tool-name">WordPress</p>
+				</a>
+			</div>
+
+			<div class="col-md-2 col-sm-4 col-6 my-tool">
+				<a href="#" target="_blank" class="my-tool-item">
 					<span class="fab fa-laravel my-tool-logo" style="color: #FB503B;"></span>
 					<p class="my-tool-name">Laravel</p>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fas fa-database my-tool-logo" style="color: #F29111;"></span>
-					<p class="my-tool-name">MYSQL</p>
-				</div>
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-react my-tool-logo" style="color: #61DBFB;"></span>
+					<p class="my-tool-name">
+						React
+					</p>
+				</a>
 			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-python my-tool-logo" style="color: #FFD43B;"></span>
-					<p class="my-tool-name">Python</p>
-				</div>
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-sass my-tool-logo" style="color: #cc6699;"></span>
+					<p class="my-tool-name">Sass</p>
+				</a>
 			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-git-alt my-tool-logo" style="color: #F1502F;"></span>
+					<p class="my-tool-name">Git</p>
+				</a>
+			</div>
+
+			<div class="col-md-2 col-sm-4 col-6 my-tool">
+				<a href="#" target="_blank" class="my-tool-item">
 					<span class="fab fa-github my-tool-logo" style="color: #171515;"></span>
-					<p class="my-tool-name">Github</p>
-				</div>
+					<p class="my-tool-name">GitHub</p>
+				</a>
 			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fas fa-file-excel my-tool-logo" style="color: #1d6f42 ;"></span>
-					<p class="my-tool-name">Excel</p>
-				</div>
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-jira my-tool-logo" style="color: #0052CC	;"></span>
+					<p class="my-tool-name">Jira</p>
+				</a>
 			</div>
 
 			<div class="col-md-2 col-sm-4 col-6 my-tool">
-				<div class="container">
-					<span class="fab fa-docker my-tool-logo" style="color: #0db7ed	;"></span>
-					<p class="my-tool-name">Docker</p>
-				</div>
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-grunt my-tool-logo" style="color: #E78625;"></span>
+					<p class="my-tool-name">Grunt</p>
+				</a>
+			</div>
+
+			<div class="col-md-2 col-sm-4 col-6 my-tool">
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-npm my-tool-logo" style="color: #CC3534	;"></span>
+					<p class="my-tool-name">NPM</p>
+				</a>
+			</div>
+
+			<div class="col-md-2 col-sm-4 col-6 my-tool">
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-markdown my-tool-logo" style="color: #000000	;"></span>
+					<p class="my-tool-name">Markdown</p>
+				</a>
+			</div>
+
+
+
+			<div class="col-md-2 col-sm-4 col-6 my-tool">
+				<a href="#" target="_blank" class="my-tool-item">
+					<span class="fab fa-ubuntu my-tool-logo" style="color: #DD4814;"></span>
+					<p class="my-tool-name">Ubuntu</p>
+				</a>
 			</div>
 
 		</div>
